# pgntui

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pgntui.spec  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/audits/: 2026-06-04-audit-A-concurrency.md  2026-06-04-audit-B-decoding.md  2026-06-04-audit-C-platform.md  2026-06-04-audit-D-packaging.md  2026-06-04-bedtime-session-summary.md  2026-06-04-release-notes-v0.3.0.md  2026-06-04-round2-audit.md  2026-06-04-round3-audit.md  2026-06-04-summary.md
docs/superpowers/plans/: 2026-06-04-pgntui-implementation.md  2026-06-06-pages-container-signal-model-phase1.md  2026-06-06-sparklines.md
docs/superpowers/specs/: 2026-06-04-pgntui-design.md  2026-06-06-auto-page-design.md  2026-06-06-pages-container-signal-model-design.md  2026-06-06-single-page-dashboard-design.md  2026-06-06-sparklines-design.md
packaging/: README.md
packaging/homebrew/: pgntui.rb
packaging/winget/: phobic.pgntui.yaml
src/pgntui/: __init__.py  __main__.py  about.py  app.py  config.py  replay_mode.py
src/pgntui/containers/: loader.py  screen.py
src/pgntui/debug/: tab.py
src/pgntui/decode/: canboat.py  fastpacket.py  router.py
src/pgntui/drivers/: actisense.py  base.py  replay.py
src/pgntui/examples/: config.toml
src/pgntui/examples/containers/: 1-nav.json  2-engine.json  3-main.json  main.json
src/pgntui/examples/signals/: alternator_voltage.json  anchor_light.json  bilge_alarm.json  boost_pressure.json  coolant_pressure.json  course_cog.json  current_direction.json  current_speed.json  depth.json  deviation.json  engine_load.json  engine_rpm.json  engine_temp.json  engine_torque.json  fuel_pressure.json  fuel_rate.json  heading_mag.json  latitude.json  longitude.json  oil_pressure.json  oil_temperature.json  rate_of_turn.json  rudder.json  speed.json  speed_sog.json  target_heading.json  tilt_trim.json  total_hours.json  true_heading.json  variation.json  water_temp.json  wind_direction.json  wind_speed.json
src/pgntui/logging/: csv.py
src/pgntui/pages/: auto.py  dashboard.py  loader.py  migrate.py  view.py
src/pgntui/recording/: reader.py  writer.py
src/pgntui/signals/: base.py  history.py  sparkline.py  widgets.py
src/pgntui/themes/: loader.py
src/pgntui/themes/builtin/: amber-crt.json  dark.json  green-phosphor.json  light.json  matrix.json  mono-ascii.json  rainbow-disco.json
tests/: test_about.py  test_actisense_driver.py  test_app_container_visible.py  test_app_empty_welcome.py  test_app_frame_loop.py  test_app_menu.py  test_app_on_write.py  test_app_quit_binding.py  test_app_record_toggle.py  test_app_shell.py  test_app_sparkline.py  test_app_textual_theme.py  test_app_worker_cancel_on_exit.py  test_auto_page.py  test_basics.py  test_builtin_themes.py  test_canboat.py  test_cli.py  test_config.py  test_config_screen.py  test_config_write.py  test_connection_screen.py  test_container_groups.py  test_container_screen.py  test_containers_loader.py  test_csv_logger.py  test_dashboard_view.py  test_debug_tab.py  test_debug_views.py  test_drivers_base.py  test_e2e_replay.py  test_example_workspace.py  test_fastpacket.py  test_history.py  test_instance_switch.py  test_library.py  test_main_driver.py  test_main_replay.py  test_migrate_workspace.py  test_open_recording.py  (+24 more)
tests/fixtures/: e2e_session.pgnlog  frames.py  sample.pgnlog
tests/fixtures/e2e_containers/: engine.json  nav.json
tests/fixtures/e2e_signals/: engine_rpm.json  wind_speed.json
