[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pgntui"
version = "0.1.2"
description = "Cross-platform TUI for NMEA 2000 with canboat decoding and pluggable drivers"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "phobicdotno" }]
keywords = ["nmea2000", "n2k", "tui", "marine", "canboat"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console :: Curses",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Terminals",
]
dependencies = [
  "textual>=0.80",
  "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-textual-snapshot>=1.0",
  "ruff>=0.6",
  "mypy>=1.10",
]
dist = [
  "pyinstaller>=6.6",
]

[project.scripts]
pgntui = "pgntui.__main__:main"

[project.entry-points."pgntui.drivers"]
actisense-ngt1 = "pgntui.drivers.actisense:NGT1Driver"
file-replay = "pgntui.drivers.replay:FileReplayDriver"

[tool.hatch.build.targets.wheel]
packages = ["src/pgntui"]

[tool.hatch.build.targets.wheel.force-include]
"src/pgntui/decode/pgns.json" = "pgntui/decode/pgns.json"
"src/pgntui/themes/builtin/dark.json" = "pgntui/themes/builtin/dark.json"
"src/pgntui/themes/builtin/light.json" = "pgntui/themes/builtin/light.json"
"src/pgntui/themes/builtin/amber-crt.json" = "pgntui/themes/builtin/amber-crt.json"
"src/pgntui/themes/builtin/green-phosphor.json" = "pgntui/themes/builtin/green-phosphor.json"
"src/pgntui/themes/builtin/mono-ascii.json" = "pgntui/themes/builtin/mono-ascii.json"
"src/pgntui/themes/builtin/rainbow-disco.json" = "pgntui/themes/builtin/rainbow-disco.json"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["pgntui"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
