[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pgntui"
version = "0.6.0"
description = "Cross-platform TUI for NMEA 2000 with canboat decoding and pluggable drivers"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "phobicdotno" }]
keywords = ["nmea2000", "n2k", "tui", "marine", "canboat"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console :: Curses",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Terminals",
]
dependencies = [
  "textual>=8.0",
  "pyserial>=3.5",
  "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-textual-snapshot>=1.0",
  "ruff>=0.6",
  "mypy>=1.10",
]
dist = [
  "pyinstaller>=6.6",
]

[project.scripts]
pgntui = "pgntui.__main__:main"

[project.urls]
Homepage = "https://github.com/phobicdotno/pgntui"
Source = "https://github.com/phobicdotno/pgntui"
"Bug Tracker" = "https://github.com/phobicdotno/pgntui/issues"
Changelog = "https://github.com/phobicdotno/pgntui/releases"

[project.entry-points."pgntui.drivers"]
actisense-ngt1 = "pgntui.drivers.actisense:NGT1Driver"
file-replay = "pgntui.drivers.replay:FileReplayDriver"

[tool.hatch.build.targets.wheel]
packages = ["src/pgntui"]

[tool.hatch.build.targets.wheel.force-include]
# Keep complete: tests/test_packaging.py asserts every non-.py data file
# under decode/, themes/builtin/ and examples/ has an entry here.
"src/pgntui/decode/pgns.json" = "pgntui/decode/pgns.json"
"src/pgntui/themes/builtin/amber-crt.json" = "pgntui/themes/builtin/amber-crt.json"
"src/pgntui/themes/builtin/dark.json" = "pgntui/themes/builtin/dark.json"
"src/pgntui/themes/builtin/green-phosphor.json" = "pgntui/themes/builtin/green-phosphor.json"
"src/pgntui/themes/builtin/light.json" = "pgntui/themes/builtin/light.json"
"src/pgntui/themes/builtin/matrix.json" = "pgntui/themes/builtin/matrix.json"
"src/pgntui/themes/builtin/mono-ascii.json" = "pgntui/themes/builtin/mono-ascii.json"
"src/pgntui/themes/builtin/rainbow-disco.json" = "pgntui/themes/builtin/rainbow-disco.json"
"src/pgntui/examples/config.toml" = "pgntui/examples/config.toml"
"src/pgntui/examples/containers/1-nav.json" = "pgntui/examples/containers/1-nav.json"
"src/pgntui/examples/containers/2-engine.json" = "pgntui/examples/containers/2-engine.json"
"src/pgntui/examples/containers/3-main.json" = "pgntui/examples/containers/3-main.json"
"src/pgntui/examples/signals/alternator_voltage.json" = "pgntui/examples/signals/alternator_voltage.json"
"src/pgntui/examples/signals/anchor_light.json" = "pgntui/examples/signals/anchor_light.json"
"src/pgntui/examples/signals/bilge_alarm.json" = "pgntui/examples/signals/bilge_alarm.json"
"src/pgntui/examples/signals/boost_pressure.json" = "pgntui/examples/signals/boost_pressure.json"
"src/pgntui/examples/signals/coolant_pressure.json" = "pgntui/examples/signals/coolant_pressure.json"
"src/pgntui/examples/signals/course_cog.json" = "pgntui/examples/signals/course_cog.json"
"src/pgntui/examples/signals/current_direction.json" = "pgntui/examples/signals/current_direction.json"
"src/pgntui/examples/signals/current_speed.json" = "pgntui/examples/signals/current_speed.json"
"src/pgntui/examples/signals/depth.json" = "pgntui/examples/signals/depth.json"
"src/pgntui/examples/signals/deviation.json" = "pgntui/examples/signals/deviation.json"
"src/pgntui/examples/signals/engine_load.json" = "pgntui/examples/signals/engine_load.json"
"src/pgntui/examples/signals/engine_rpm.json" = "pgntui/examples/signals/engine_rpm.json"
"src/pgntui/examples/signals/engine_temp.json" = "pgntui/examples/signals/engine_temp.json"
"src/pgntui/examples/signals/engine_torque.json" = "pgntui/examples/signals/engine_torque.json"
"src/pgntui/examples/signals/fuel_pressure.json" = "pgntui/examples/signals/fuel_pressure.json"
"src/pgntui/examples/signals/fuel_rate.json" = "pgntui/examples/signals/fuel_rate.json"
"src/pgntui/examples/signals/heading_mag.json" = "pgntui/examples/signals/heading_mag.json"
"src/pgntui/examples/signals/latitude.json" = "pgntui/examples/signals/latitude.json"
"src/pgntui/examples/signals/longitude.json" = "pgntui/examples/signals/longitude.json"
"src/pgntui/examples/signals/oil_pressure.json" = "pgntui/examples/signals/oil_pressure.json"
"src/pgntui/examples/signals/oil_temperature.json" = "pgntui/examples/signals/oil_temperature.json"
"src/pgntui/examples/signals/rate_of_turn.json" = "pgntui/examples/signals/rate_of_turn.json"
"src/pgntui/examples/signals/rudder.json" = "pgntui/examples/signals/rudder.json"
"src/pgntui/examples/signals/speed.json" = "pgntui/examples/signals/speed.json"
"src/pgntui/examples/signals/speed_sog.json" = "pgntui/examples/signals/speed_sog.json"
"src/pgntui/examples/signals/target_heading.json" = "pgntui/examples/signals/target_heading.json"
"src/pgntui/examples/signals/tilt_trim.json" = "pgntui/examples/signals/tilt_trim.json"
"src/pgntui/examples/signals/total_hours.json" = "pgntui/examples/signals/total_hours.json"
"src/pgntui/examples/signals/true_heading.json" = "pgntui/examples/signals/true_heading.json"
"src/pgntui/examples/signals/variation.json" = "pgntui/examples/signals/variation.json"
"src/pgntui/examples/signals/water_temp.json" = "pgntui/examples/signals/water_temp.json"
"src/pgntui/examples/signals/wind_direction.json" = "pgntui/examples/signals/wind_direction.json"
"src/pgntui/examples/signals/wind_speed.json" = "pgntui/examples/signals/wind_speed.json"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["pgntui"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
